FINISHED calculator: adding toBinary for integer/double and strinf formats